src/test/resources/etapa4/failing/wrongAssign01.ru
/? verifica que se chequee el tipo al asignar un valor a una variable pasada como parámetro a una función.
/? ERROR: SEMÁNTICO - SENTENCIAS
/? | NÚMERO DE LINEA: 12| NÚMERO DE COLUMNA: 9| DESCRIPCION: Type error in assignment. Can't assign type 'Int' to variable of type 'Str'.

struct A{
}

impl A {
    .(){}

    fn met1(Str w) -> Int {
        w = 5;
    }
}



start {}